--- a/magic-cake.html
+++ b/magic-cake.html
@@ -1,32 +1,37 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="mystyle.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <h1> Recipe World </h1>
-    <ul>
-      <li> <a href="home.html"> Home </a> </li>
-      <li> <a href="recipes.html"> Recipes </a> </li>
-      <li> <a href="suggest.html"> Suggest </a> </li>
-    </ul>
-    <h2> Magic Cake </h2>
-    <p> Magic Cake is one of the tastiest cake the world has known. </br>
-        Few have tried it and lived to tell about it, and these are their stories. </p>
-    <p> We also need to stress that whatever happens to you as result of consuming Magic Cake  is your responsibility. </br>
-	      You're been warned and you can view our <a href="legal.html" target="_blank"> legal page </a> for more information. </p>
-    <h3> Ingredients </h3>
-    <ul>
-      <li> 2 eggs </li>
-      <li> 1 pound of <a href="https://www.amazon.co.uk/Tate-Lyle-Fairtrade-Caster-Sugar/dp/B01B7GJPOW/ref=sr_1_4?dchild=1&keywords=sugar&qid=1592600209&sr=8-4"> sugar </a> </li>
-      <li> 3 sticks of butter </li>
-    </ul>
-    <h3> Directions </h3>
-    <ol>
-      <li> Mix eggs, sugar, and butter in a large bowl </li>
-      <li> Spread into a non-stick dish </li>
-      <li> Bake at 350 degress for 1 hour </li>
-      <li> Let sit at room temperature for 20 minutes </li>
-      <li> Eat and enjoy! </li>
-    </ol>
+    <div class="header">
+      <h1> Recipe World </h1>
+        <ul class="nav">
+          <li> <a href="home.html"> Home </a> </li>
+          <li> <a href="recipes.html"> Recipes </a> </li>
+          <li> <a href="suggest.html"> Suggest </a> </li>
+      </ul>
+    </div>
+    <div class="main-content">
+      <h2> Magic Cake </h2>
+      <p> Magic Cake is one of the tastiest cake the world has known. </br>
+          Few have tried it and lived to tell about it, and these are their stories. </p>
+      <p> We also need to stress that whatever happens to you as result of consuming Magic Cake  is your responsibility. </br>
+	        You're been warned and you can view our <a href="legal.html" target="_blank"> legal page </a> for more information. </p>
+      <h3> Ingredients </h3>
+      <ul>
+        <li> 2 eggs </li>
+        <li> 1 pound of <a href="https://www.amazon.co.uk/Tate-Lyle-Fairtrade-Caster-Sugar/dp/B01B7GJPOW/ref=sr_1_4?dchild=1&keywords=sugar&qid=1592600209&sr=8-4"> sugar </a> </li>
+        <li> 3 sticks of butter </li>
+      </ul>
+      <h3> Directions </h3>
+      <ol>
+        <li> Mix eggs, sugar, and butter in a large bowl </li>
+        <li> Spread into a non-stick dish </li>
+        <li> Bake at 350 degress for 1 hour </li>
+        <li> Let sit at room temperature for 20 minutes </li>
+        <li> Eat and enjoy! </li>
+      </ol>
+    </div>
   </body>
 </html>
