Classes & Layout: CSS Selectors

--- a/support.html
+++ b/support.html
@@ -13,7 +13,7 @@
       </ul>
     </div>
     <div class="main-content">
-      <h2> Suggest a recipe </h2>
-    </div
+      <h2> Support </h2>
+    </div>
  </body>
 </html>
