--- a/tacosaurus-mex.html
+++ b/tacosaurus-mex.html
@@ -13,7 +13,10 @@
       </ul>
     </div>
     <div class="main-content">
-      <h2> Suggest a recipe </h2>
-    </div
- </body>
+      <h2> Tacosaurus Mex </h2>
+      <p> It's always taco night somewhere! </p>
+      <p> We also need to stress that whatever happens to you as result of consuming Tacosaurus Mex is your responsibility. </br>
+	        You're been warned and you can view our <a href="legal.html" target="_blank"> legal page </a> for more information. </p>
+   </div>
+  </body>
 </html>
