--- a/florida-omlette.html
+++ b/florida-omlette.html
@@ -13,7 +13,10 @@
       </ul>
     </div>
     <div class="main-content">
-      <h2> Suggest a recipe </h2>
-    </div
- </body>
+      <h2> Florida Omlette </h2>
+      <p> Omlette you in on a little secret - this is one tasty egg </p>
+      <p> We also need to stress that whatever happens to you as result of consuming Frorida Omlette is your responsibility. </br>
+	        You're been warned and you can view our <a href="legal.html" target="_blank"> legal page </a> for more information. </p>
+   </div>
+  </body>
 </html>
