--- a/magic-cake.html
+++ b/magic-cake.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="mystyle.css" rel="stylesheet" type="text/css">
+    <link type="text/css" rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="header">
       <h1> Recipe World </h1>
-        <ul class="nav">
-          <li> <a href="home.html"> Home </a> </li>
-          <li> <a href="recipes.html"> Recipes </a> </li>
-          <li> <a href="suggest.html"> Suggest </a> </li>
+      <ul class="nav">
+        <li> <a href="home.html"> Home </a> </li>
+        <li> <a href="recipes.html"> Recipes </a> </li>
+        <li> <a href="suggest.html"> Suggest </a> </li>
       </ul>
     </div>
     <div class="main-content">
