--- a/mystery-wich.html
+++ b/mystery-wich.html
@@ -13,7 +13,10 @@
       </ul>
     </div>
     <div class="main-content">
-      <h2> Suggest a recipe </h2>
-    </div
- </body>
+      <h2> Mystery Wich </h2>
+      <p>It's a sandwish. That's all we can really say right now. </p>
+      <p> We also need to stress that whatever happens to you as result of consuming Mystery Wich is your responsibility. </br>
+	        You're been warned and you can view our <a href="legal.html" target="_blank"> legal page </a> for more information. </p>
+   </div>
+  </body>
 </html>
