Font & Forms: Adjusting Font Styles

--- a/florida-omlette.html
+++ b/florida-omlette.html
@@ -18,5 +18,8 @@
       <p> We also need to stress that whatever happens to you as result of consuming Frorida Omlette is your responsibility. </br>
 	        You're been warned and you can view our <a href="legal.html" target="_blank"> legal page </a> for more information. </p>
    </div>
+   <div class="footer">
+       <p> &copy; 2020 - Recipe World </p>
+   </div>
   </body>
 </html>
