--- a/legal.html
+++ b/legal.html
@@ -8,5 +8,8 @@
     <p> The recipes found on this site are for informational purposes only. </br>
         Recipe World is not responsible for any demage or harm that results from following any of the directions or consuming any of the foods.
     </p>
+    <div class="footer">
+        <p> &copy; 2020 - Recipe World </p>
+    </div>
   </body>
 </html>
