--- a/magic-cake.html
+++ b/magic-cake.html
@@ -33,5 +33,8 @@
         <li> Eat and enjoy! </li>
       </ol>
     </div>
+    <div class="footer">
+        <p> &copy; 2020 - Recipe World </p>
+    </div>
   </body>
 </html>
