--- a/recipes.html
+++ b/recipes.html
@@ -33,5 +33,8 @@
         </li>
       </ul>
     </div>
+    <div class="footer">
+        <p> &copy; 2020 - Recipe World </p>
+    </div>
  </body>
 </html>
