--- a/suggest.html
+++ b/suggest.html
@@ -14,6 +14,9 @@
     </div>
     <div class="main-content">
       <h2> Suggest a recipe </h2>
-    </div
+    </div>
+    <div class="footer">
+        <p> &copy; 2020 - Recipe World </p>
+    </div>
  </body>
 </html>
