--- a/support.html
+++ b/support.html
@@ -15,5 +15,8 @@
     <div class="main-content">
       <h2> Support </h2>
     </div>
+    <div class="footer">
+        <p> &copy; 2020 - Recipe World </p>
+    </div>
  </body>
 </html>
