--- a/suggest.html
+++ b/suggest.html
@@ -14,6 +14,24 @@
     </div>
     <div class="main-content">
       <h2> Suggest a recipe </h2>
+      <form>
+        <label for="recipe-name"> Recipe Name </label>
+        <input type="text" id="recipe-name">
+
+        <label for="ingredients"> Ingredients </label>
+        <textarea id="ingredients"> </textarea>
+
+        <label for="your-name"> Your Name </label>
+        <input type="text" id="your-name">
+
+        <label for="your-email"> Your Email </label>
+        <input type="text" id="your-email">
+
+        <label for="newsletter"> Get Newsletter? </label>
+        <input type="checkbox" id="newsletter">
+
+        <input type="submit" value="Click to submit">
+      </form>
     </div>
     <div class="footer">
         <p> &copy; 2020 - Recipe World </p>
