Images: Content Images

--- a/magic-cake.html
+++ b/magic-cake.html
@@ -32,6 +32,10 @@
         <li> Let sit at room temperature for 20 minutes </li>
         <li> Eat and enjoy! </li>
       </ol>
+      <h3> Photos </h3>
+        <ul class="photos">
+          <li> <img src="images/magic-cake.jpg" alt="Magic Cake photo"> </li>
+        </ul>
     </div>
     <div class="footer">
         <p> &copy; 2020 - Recipe World </p>
