Images: Floating Images

--- a/recipes.html
+++ b/recipes.html
@@ -16,6 +16,7 @@
       <h2> Recipes </h2>
       <ul class="recipes">
         <li>
+          <image src="images/magic-cake-logo.jpg">
           <h3> <a href="magic-cake.html"> Magic Cake </a> </h3>
           <p> This is a dangerously delicious cake. </p>
         </li>
