--- a/home.html
+++ b/home.html
@@ -14,6 +14,11 @@
     </div>
     <div class="main-content">
       <h2> Home </h2>
+      <div class="featured-image">
+        <h3>
+          Featured: Magic Cake
+        </h3>
+      </div>
     </div>
     <div class="footer">
       <p> &copy; 2020 - Recipe World </p>
