Update index.html file syntax

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
+
 <html>
   <head>
     <link type="text/css" rel="stylesheet" href="style.css">
   </head>
+
   <body>
     <div class="header">
-      <h1> Recipe World </h1>
+      <h1>Recipe World</h1>
       <ul class="nav">
         <li> <a href="index.html"> Home </a> </li>
         <li> <a href="recipes.html"> Recipes </a> </li>
@@ -13,15 +15,14 @@
       </ul>
     </div>
     <div class="main-content">
-      <h2> Home </h2>
+      <h2>Home</h2>
       <div class="featured-image">
-        <h3>
-          Featured: Magic Cake
-        </h3>
+        <h3>Featured: Magic Cake</h3>
       </div>
     </div>
     <div class="footer">
       <p> &copy; 2020 - Recipe World </p>
     </div>
  </body>
+
 </html>
